--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "@mui/system": "^5.11.2",
+    "apexcharts": "^3.36.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "ts-node": "^10.9.1",
