--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
-    "ts-node": "^10.9.1",
-    "victory": "^36.6.8"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
