--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.11.3",
     "@mui/system": "^5.11.2",
     "cors": "^2.8.5",
+    "csv-parse": "^5.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "highcharts": "^10.3.3",
